feat(telemetry): add workspace package with OpenTelemetry and Cloud Logging
Add telemetry workspace package adapted from CliniCraft for Selflytics:
- Package name: selflytics-telemetry (in pyproject.toml)
- Import name: telemetry (simpler, cleaner)
- OpenTelemetry tracing with Cloud Trace exporter
- Structured logging with Cloud Logging integration
- PII redaction utilities for security compliance
- Comprehensive tests and documentation

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "opentelemetry-api>=1.38.0",
     "opentelemetry-sdk>=1.38.0",
     "opentelemetry-instrumentation-logging>=0.59b0",
-    "selflytics-telemetry",
+    "selflytics-telemetry",  # workspace package
 ]
 
 [project.optional-dependencies]
