--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "email-validator>=2.1.0",
     # Authentication
     "python-jose[cryptography]>=3.3.0",
-    "passlib[bcrypt]>=1.7.4",
+    "bcrypt>=4.1.2",
     # GCP Services
     "google-cloud-firestore>=2.14.0",
     "google-cloud-secret-manager>=2.18.0",
