--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "opentelemetry-api>=1.38.0",
     "opentelemetry-sdk>=1.38.0",
     "opentelemetry-instrumentation-logging>=0.59b0",
-    "selflytics-telemetry",  # workspace package
+    "selflytics-telemetry", # workspace package
+    "python-dotenv>=1.2.1",
 ]
 
 [project.optional-dependencies]
