--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -7,6 +7,11 @@ __pycache__/
 *.egg-info/
 dist/
 build/
+*.whl
+
+# Python build artifacts
+.cache/
+pip-wheel-metadata/
 
 # Virtual environments
 .venv/
@@ -16,12 +21,16 @@ ENV/
 # Testing
 .pytest_cache/
 .coverage
+**/.coverage.*
 htmlcov/
 coverage.xml
 *.cover
+tmp_*/
+.tmp/
 
 # Linting & formatting
 .ruff_cache/
+**/.ruff_cache/
 
 # IDE
 .vscode/
@@ -54,6 +63,7 @@ tests/
 
 # OS
 .DS_Store
+._*
 Thumbs.db
 
 # Terraform
