feat(ci): add simplified preview limit check script
- Create check-preview-limit.sh to validate preview deployment count
- Replace complex preview CLI with focused script (CI-only)
- Implements safety margin to prevent race conditions
- Includes retry logic for transient GCP API issues
- Update preview.yml to use new script

Fixes preview deployment workflow failures on PR #3

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -52,7 +52,7 @@ jobs:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           GCP_REGION: ${{ env.REGION }}
         run: |
-          if ./infra/scripts/preview count --quiet; then
+          if ./infra/scripts/check-preview-limit.sh --quiet; then
             echo "can-deploy=true" >> $GITHUB_OUTPUT
           else
             echo "can-deploy=false" >> $GITHUB_OUTPUT
