feat(phase-1): Infrastructure Foundation - Authentication, Frontend, and Terraform Deployment (#3)
* chore: add initial project structure

Create foundational directory structure for Selflytics:
- Backend app with auth, services, routes, models, templates modules
- Telemetry workspace package for observability
- Test directories (unit, integration, e2e)
- Infrastructure modules and environments for Terraform
- Static assets and scripts directories
- GitHub workflows directory with placeholder structure

* chore: add project configuration files

Add essential configuration files adapted from CliniCraft reference project:
- backend/pyproject.toml: Python dependencies and project metadata
- .pre-commit-config.yaml: Code quality hooks (ruff, bandit, formatting)
- .gitignore: Exclude spike artifacts, Python cache, and uv files
- .env.example files: Environment variable templates for root and backend

* feat(telemetry): add workspace package with OpenTelemetry and Cloud Logging

Add telemetry workspace package adapted from CliniCraft for Selflytics:
- Package name: selflytics-telemetry (in pyproject.toml)
- Import name: telemetry (simpler, cleaner)
- OpenTelemetry tracing with Cloud Trace exporter
- Structured logging with Cloud Logging integration
- PII redaction utilities for security compliance
- Comprehensive tests and documentation

* feat(auth): implement bcrypt-based password hashing

Add password hashing and verification utilities using bcrypt directly,
removing passlib dependency. Includes comprehensive test suite with 13
tests covering edge cases, unicode, special characters, and security.

* feat(auth): add JWT token handling and configuration

- Add Pydantic Settings configuration (config.py)
- Implement JWT token creation and verification (auth/jwt.py)
- Add comprehensive test suite with 10 passing tests

* docs: update phase 1 plan with completed steps and implementation notes

Mark steps 1-5 as completed:
- Infrastructure setup, telemetry package, configura

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,16 @@ cache/
 local/
 tmp/
 temp/
+
+# Spike artifacts
+spike/cache/
+spike/.env
+
+# uv
+.uv/
+
+# Node modules (for future Tailwind)
+node_modules/
+package-lock.json
+yarn.lock
+.envrc
