feat(garmin): add data models with comprehensive test coverage
- Add garth and google-cloud-kms dependencies
- Implement GarminActivity, DailyMetrics, HealthSnapshot, GarminUserProfile models
- Create comprehensive unit tests with 100% coverage
- All tests passing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,10 @@ name = "selflytics"
 version = "0.1.0"
 description = "AI-powered analysis for quantified self data"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "garth>=0.5.19",
+    "google-cloud-kms>=3.7.0",
+]
 
 [tool.uv.workspace]
 members = ["spike"]
