--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "opentelemetry-instrumentation-logging>=0.59b0",
     "selflytics-telemetry", # workspace package
     "python-dotenv>=1.2.1",
+    "google-cloud-kms>=3.7.0",
+    "garth>=0.5.19",
 ]
 
 [project.optional-dependencies]
