feat(garmin): implement Garmin API routes with authentication
Add four authenticated Garmin endpoints: link account, sync data, get status, and render settings page.
All routes require JWT authentication and include comprehensive error handling.
Includes 13 passing integration tests covering authentication, validation, and business logic.
Also fixes pre-commit bandit configuration to properly scan only backend/app with low-level severity filtering.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,8 +14,9 @@ repos:
     rev: 1.8.6
     hooks:
       - id: bandit
-        args: ["-c", "backend/pyproject.toml", "-r", "backend/app"]
+        args: ["-c", "backend/pyproject.toml", "-r", "backend/app/", "-ll"]
         additional_dependencies: ["bandit[toml]"]
+        pass_filenames: false
 
   # Standard pre-commit hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
