chore: add test identifiers and format debug scripts
- Add data-testid attributes to Garmin settings template
- Add pytest-playwright dependency for future E2E tests
- Format debug scripts with ruff
- Update template test fixtures for form data

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,7 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.23.0",
+    "pytest-playwright>=0.4.0",
 
     # Code Quality
     "ruff>=0.1.0",
@@ -148,3 +149,8 @@ members = [
 
 [tool.uv.sources]
 selflytics-telemetry = { workspace = true, editable = true }
+
+[dependency-groups]
+dev = [
+    "pytest-playwright>=0.7.1",
+]
