--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,15 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.14.3
     hooks:
+      # Stage 1: Auto-fix issues that can be fixed automatically
       - id: ruff
         args: [--fix]
-        name: ruff (lint + auto-fix)
+        name: ruff (auto-fix)
+      # Stage 2: Strict check for remaining violations
+      - id: ruff
+        args: [--output-format=full]
+        name: ruff (strict check)
+      # Stage 3: Format code
       - id: ruff-format
         name: ruff (format)
 
