feat(phase-2): Complete Garmin integration with OAuth, token encryption, and caching (#4)
* feat(garmin): add data models with comprehensive test coverage

- Add garth and google-cloud-kms dependencies
- Implement GarminActivity, DailyMetrics, HealthSnapshot, GarminUserProfile models
- Create comprehensive unit tests with 100% coverage
- All tests passing

* feat(models): add GarminToken storage models with encryption support

- Add GarminToken model for encrypted OAuth1/OAuth2 token storage
- Add GarminTokenDecrypted model for decrypted token representation
- Implement comprehensive unit tests with 100% coverage
- Use timezone-aware datetime to fix deprecation warnings

* feat(encryption): add GCP KMS token encryption utilities

Add encrypt_token and decrypt_token functions using GCP KMS for secure OAuth token storage.
Includes comprehensive unit tests with 100% coverage and mocked KMS client.
Dependencies: google-cloud-kms, garth

* infra: add KMS module for Garmin token encryption

- Create KMS module with key ring and crypto key resources
- Configure KMS in dev environment with IAM bindings
- Enable 90-day automatic key rotation
- Update encryption utilities to support KMS integration

* docs(phase-2): mark steps 1-4 complete with 100% test coverage

Updated phase plan to reflect completion of:
- Environment setup and Garmin data models
- Token models with encryption and KMS infrastructure
- All TDD workflows completed successfully

* chore(scripts): add KMS validation to GCP setup script

Added Cloud KMS API, key ring/crypto key validation, and IAM permissions check for Cloud Run service account. Shows rotation details in verbose mode.

* docs(phase-2): mark terraform deployment and KMS verification complete

Updated PHASE_2_plan.md progress tracking:
- Step 4 terraform apply completed (18 checks passing)
- KMS key verification completed
- Next step marker moved to Step 5 (GarminClient service)

* feat(garmin): add GarminClient service with token encryption

- 

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "opentelemetry-instrumentation-logging>=0.59b0",
     "selflytics-telemetry", # workspace package
     "python-dotenv>=1.2.1",
+    "google-cloud-kms>=3.7.0",
+    "garth>=0.5.19",
 ]
 
 [project.optional-dependencies]
@@ -37,6 +39,7 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.23.0",
+    "pytest-playwright>=0.4.0",
 
     # Code Quality
     "ruff>=0.1.0",
@@ -146,3 +149,8 @@ members = [
 
 [tool.uv.sources]
 selflytics-telemetry = { workspace = true, editable = true }
+
+[dependency-groups]
+dev = [
+    "pytest-playwright>=0.7.1",
+]
