feat(phase-3): add chat and conversation data models
Add Pydantic models for chat interface and conversation management:
- ChatRequest/ChatResponse/Message models for AI chat interactions
- Conversation/ConversationCreate models for conversation lifecycle
- Comprehensive unit tests with 100% coverage for new models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.12"
 dependencies = [
     "garth>=0.5.19",
     "google-cloud-kms>=3.7.0",
+    "openai>=2.7.2",
+    "pydantic-ai>=1.14.0",
 ]
 
 [tool.uv.workspace]
