feat(phase-3): Add Pydantic-AI chat agent with Garmin data tools
Implements AI-powered chat agent for analysing Garmin fitness data using Pydantic-AI and GPT-4.1-mini. Includes three specialized tools for querying activities, metrics, and profile data with built-in caching support.

Features:
- Chat agent factory with fitness analyst system prompt
- garmin_activity_tool: Query activities by date range and type
- garmin_metrics_tool: Fetch daily metrics (steps, HR, sleep, stress)
- garmin_profile_tool: Retrieve user profile information
- Comprehensive test coverage (8 tests, all passing)
- Added dependencies: pydantic-ai, openai

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "google-cloud-kms>=3.7.0",
     "garth>=0.5.19",
+    "pydantic-ai>=1.15.0",
+    "openai>=2.7.2",
 ]
 
 [project.optional-dependencies]
