fix: configure pre-commit to check all files, not just staged
Changed ruff hooks to use pass_filenames: false and explicit backend/ path.
This ensures ALL Python files are checked/formatted on every commit,
preventing mismatches between local pre-commit and CI checks.

Without this, pre-commit only checked staged files, allowing formatting
issues in previously-committed files to slip through to CI.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,15 +5,19 @@ repos:
     hooks:
       # Stage 1: Auto-fix issues that can be fixed automatically
       - id: ruff
-        args: [--fix]
+        args: [--fix, backend/]
         name: ruff (auto-fix)
+        pass_filenames: false
       # Stage 2: Strict check for remaining violations
       - id: ruff
-        args: [--output-format=full]
+        args: [--output-format=full, backend/]
         name: ruff (strict check)
+        pass_filenames: false
       # Stage 3: Format code
       - id: ruff-format
+        args: [backend/]
         name: ruff (format)
+        pass_filenames: false
 
   # Security checks
   - repo: https://github.com/PyCQA/bandit
