feat: Add configurable ports for local e2e testing
Enable developers to run e2e tests with custom ports via .env.local to avoid conflicts with other services. Configuration is centralized and documented in .env.local.example with non-conflicting defaults (8042 for web server, 8092 for Firestore emulator).

--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -2,11 +2,14 @@
 # Copy this file to .env.local and configure for local e2e testing
 
 # Server Configuration
-PORT=8000
-BASE_URL=http://localhost:8000
+# Using non-standard ports to avoid conflicts with other services
+PORT=8042
+BASE_URL=http://localhost:8042
 
-# Firestore Emulator (set automatically by local-e2e-server.sh)
-FIRESTORE_EMULATOR_HOST=localhost:8080
+# Firestore Emulator Configuration
+# Note: local-e2e-server.sh will use these values when starting the emulator
+FIRESTORE_EMULATOR_PORT=8092
+FIRESTORE_EMULATOR_HOST=localhost:8092
 GOOGLE_CLOUD_PROJECT=test-project
 
 # JWT Configuration (use test values for local e2e)
