--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -13,7 +13,7 @@ FIRESTORE_EMULATOR_HOST=localhost:8092
 GOOGLE_CLOUD_PROJECT=test-project
 
 # JWT Configuration (use test values for local e2e)
-JWT_SECRET_KEY=test-secret-key-for-local-e2e-testing-only-do-not-use-in-production
+JWT_SECRET=test-secret-key-for-local-e2e-testing-only-do-not-use-in-production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
@@ -27,8 +27,8 @@ OPENAI_API_KEY=test-key
 # Encryption (use test key for local e2e)
 ENCRYPTION_KEY=test-encryption-key-32-bytes-1234
 
-# Environment
-ENVIRONMENT=local-e2e
+# Environment (MUST be 'dev' or 'development' for local e2e testing)
+ENVIRONMENT=dev
 
 # Note: This configuration is for LOCAL E2E TESTING ONLY
 # Real credentials are stored in GCP Secret Manager
