--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -154,5 +154,6 @@ selflytics-telemetry = { workspace = true, editable = true }
 
 [dependency-groups]
 dev = [
+    "beautifulsoup4>=4.14.2",
     "pytest-playwright>=0.7.1",
 ]
