fix: disable pytest-logfire plugin to resolve async event loop conflicts
- Added `-p no:logfire` to pytest addopts in backend/pyproject.toml
- Fixes 108 async test failures caused by pytest-logfire interfering with pytest-asyncio
- Root cause: Plugin attempts event loop wrapping that conflicts with pytest-asyncio fixture scoping
- Result: 331 unit/integration tests now passing (was 223/331 before fix)
- Remaining failures: 2 e2e tests (chat page rendering + button state reset)

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -120,7 +120,7 @@ python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
 asyncio_mode = "auto"
-addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
+addopts = "-v --cov=app --cov-report=term-missing --cov-report=html -p no:logfire"
 markers = [
     "e2e: End-to-end tests that require external dependencies (gcloud, GCP, etc.)",
     "api: Tests that make calls to external APIs (OpenAI, Garmin, etc.)",
