feat: add mypy type checking with strict mode
- Add mypy>=1.8.0 and type stubs (types-python-jose, types-passlib) to dev dependencies
- Configure strict mypy in backend/pyproject.toml with proper ignore patterns for untyped libraries
- Add py.typed marker to telemetry workspace package for type hint discovery
- Add comprehensive type annotations across codebase:
  - Models: dict[str, Any] for flexible metadata fields
  - Services: return type annotations for all methods
  - Routes: Jinja2Templates and Any types for FastAPI handlers
  - Utils: type hints for cache, encryption, cost tracking
- Update CI workflow to run both mypy --strict AND ruff type checking
- Mypy in pre-commit disabled (runs in CI with full dependencies instead)
- All 220 unit tests pass with no behavior changes

Closes #6

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -166,12 +166,20 @@ strict_equality = true
 # Allow dynamic typing for some common patterns
 [[tool.mypy.overrides]]
 module = [
+    "garth",
     "garth.*",
     "pydantic_ai.*",
+    "google.cloud",
     "google.cloud.*",
+    "google.api_core.*",
     "opentelemetry.*",
     "passlib.*",
     "jose.*",
+    "telemetry",
+    "telemetry.*",
+    "bcrypt",
+    "pydantic_settings",
+    "dotenv",
 ]
 ignore_missing_imports = true
 
