--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,9 +207,11 @@ jobs:
       - name: Install dependencies
         run: uv sync --all-extras
 
-      - name: Run type checking
+      - name: Run mypy type checking
+        run: uv run mypy app --strict
+
+      - name: Run ruff type checking
         run: uv run ruff check --select=TCH .
-        continue-on-error: true  # Non-blocking for now
 
   # Terraform validation runs on: push to main, or non-draft PRs
   # Skipped for draft PRs to provide faster feedback
