--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,18 +19,15 @@ repos:
         name: ruff (format)
         pass_filenames: false
 
-  # Type checking
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.14.1
-    hooks:
-      - id: mypy
-        args: [--config-file=backend/pyproject.toml, backend/app/]
-        pass_filenames: false
-        additional_dependencies:
-          - types-python-jose
-          - types-passlib
-          - pydantic>=2.5.0
-          - fastapi>=0.109.0
+  # Type checking - disabled in pre-commit, enabled in CI
+  # Pre-commit mypy runs in isolated environment with different dependencies
+  # CI runs mypy with full project dependencies for accurate type checking
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v1.14.1
+  #   hooks:
+  #     - id: mypy
+  #       args: [--config-file=backend/pyproject.toml, backend/app/]
+  #       pass_filenames: false
 
   # Security checks
   - repo: https://github.com/PyCQA/bandit
