--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -43,6 +43,7 @@ dev = [
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.23.0",
     "pytest-playwright-asyncio>=0.7.0",
+    "pytest-timeout>=2.3.1",
     "beautifulsoup4>=4.14.2",
 
     # Code Quality
@@ -124,6 +125,8 @@ python_functions = "test_*"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
 addopts = "-v -p no:logfire"
+timeout = 30
+timeout_method = "thread"
 markers = [
     "e2e: End-to-end tests that require external dependencies (gcloud, GCP, etc.)",
     "api: Tests that make calls to external APIs (OpenAI, Garmin, etc.)",
@@ -154,3 +157,8 @@ members = [
 
 [tool.uv.sources]
 selflytics-telemetry = { workspace = true, editable = true }
+
+[dependency-groups]
+dev = [
+    "pytest-timeout>=2.4.0",
+]
