fix: Configure session-scoped event loop for e2e tests
Adds asyncio_default_test_loop_scope="session" to pytest configuration
to fix event loop scope mismatch between pytest-asyncio and
pytest-playwright-asyncio.

Root cause: pytest-playwright-asyncio provides session-scoped async
fixtures (browser, page), but test functions defaulted to
function-scoped event loops, causing deadlock during browser operations.

All 29 e2e tests now pass in ~29s (previously timed out after 60s).

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -124,6 +124,7 @@ python_classes = "Test*"
 python_functions = "test_*"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+asyncio_default_test_loop_scope = "session"
 addopts = "-v -p no:logfire --ignore=tests/e2e_playwright --ignore=tests/e2e"
 timeout = 30
 timeout_method = "thread"
