--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -125,7 +125,7 @@ python_functions = "test_*"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
 asyncio_default_test_loop_scope = "session"
-addopts = "-v -p no:logfire --ignore=tests/e2e_playwright --ignore=tests/e2e"
+addopts = "-v -p no:logfire"
 timeout = 30
 timeout_method = "thread"
 markers = [
